fix : change the full name

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>My name Gishor</h1>
+    <h1>My Name Gishor Rajendra</h1>
   </body>
 </html>
